# SEALCrypt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
.trunk/: trunk.yaml
cmake/: cmake_uninstall.cmake.in  sealcrypt-config.cmake.in
examples/: homomorphic_add_example.cpp
include/sealcrypt/: context.hpp  decrypt.hpp  encrypt.hpp  file_handler.hpp  homomorphic.hpp  keys.hpp  sealcrypt.hpp  verify.hpp
src/: CMakeLists.txt  context.cpp  decrypt.cpp  encrypt.cpp  file_handler.cpp  homomorphic.cpp  keys.cpp  main.cpp
tests/: CMakeLists.txt  test_decryptor.cpp  test_encryptor.cpp  test_file_handler.cpp  test_fixtures.hpp  test_homo_add.cpp  test_homo_add_inplace.cpp  test_homo_add_plain.cpp  test_homo_chained_ops.cpp  test_homo_encrypt_decrypt.cpp  test_homo_is_transparent.cpp  test_homo_isvalid.cpp  test_homo_mod_switch.cpp  test_homo_mul.cpp  test_homo_mul_inplace.cpp  test_homo_mul_plain.cpp  test_homo_negate.cpp  test_homo_noise_budget.cpp  test_homo_polynomial.cpp  test_homo_power.cpp  test_homo_relinearize.cpp  test_homo_save_load.cpp  test_homo_serialize.cpp  test_homo_size.cpp  test_homo_square.cpp  test_homo_sub.cpp  test_homo_sub_inplace.cpp  test_homo_sub_plain.cpp  test_keypair_generate.cpp  test_keypair_generate_all.cpp  test_keypair_generate_galois.cpp  test_keypair_generate_relin.cpp  test_keypair_save_load.cpp  test_keypair_save_load_relin.cpp  test_verify.cpp
